# compliance_azure

./: README.md  pyproject.toml  requirement.txt
backend/scripts/: index_document.py
backend/src/api/: server.py  telementry.py
backend/src/graph/: nodes.py
backend/src/services/: video_indexer.py
