[project]
name = "compliance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.3",
    "azure-monitor-opentelemetry>=1.8.8",
    "azure-search-documents>=12.0.0",
    "azure-storage-blob>=12.30.0",
    "cd>=1.1.0",
    "fastapi>=0.137.2",
    "firecrawl-py>=4.30.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "langsmith>=0.8.16",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "yt-dlp>=2026.6.9",
]
